objects/project_cloud__Revenue_Recognition__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>This field will allow users to add a description about what the Revenue Recognition is about.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <referenceTo>project_cloud__Project_Milestone__c</referenceTo>
        <relationshipLabel>Revenue Recognitions</relationshipLabel>
        <relationshipName>Revenue_Recognitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project that this revenue recognition is related to</description>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Revenue Recognitions</relationshipLabel>
        <relationshipName>Revenue_Recognitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Revenue Recognition</label>
    <nameField>
        <displayFormat>RR-{0000000000}</displayFormat>
        <label>Revenue Recognition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Recognition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>